fix file input alignment

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
 }
 .file-picker-div {
   height: max-content;
+  display: flex;
 }
 .file-picker-div button {
   padding: 20px;
